--- a/style/style.css
+++ b/style/style.css
@@ -24,6 +24,7 @@ a:link, a:visited {
 
 a:hover {
   background: rgb(243, 240, 240, 0.5);
+  
 }
 
 .icon {
@@ -70,17 +71,10 @@ main {
 @media screen and (max-width: 600px) {
   .nav.responsive {
     display: grid;
-    /*flex-direction: column;
-    flex-wrap: wrap;
-    align-content: space-around;
-    align-items: flex-end;}*/
+    transition: 3s;
 }
 
   .nav.responsive a {
     visibility: visible;
-
   }
-
-  
-  
 }
